feat: update project release and announcement management